Aggiunta endpoint classifica di un utente
Endpoint per ottenere la posizione in classifica di un utente in base al suo id o username.
Endpoint per ottenere la posizione in classifica dell'utente al quale è assegnato il token
