# swagger.yaml
@@ -1,120 +1,391 @@
-swagger: '2.0'
+openapi: 3.0.0
 info:
-  version: '1.0'
-  title: "Gamery"
-  description: Polls is a simple API allowing consumers to view polls and vote in them.
-  license:
-    name: MIT
-    url: https://github.com/apiaryio/polls-api/blob/master/LICENSE
-host: polls.apiblueprint.org
-basePath: /
-schemes:
-- https
-consumes:
-- application/json
-produces:
-- application/json
+  title: Gamery js
+  version: '0.1'
 paths:
-  /questions:
-    x-summary: Questions Collection
-    get:
-      summary: List All Questions
-      responses:
-        200:
-          description: Successful Response
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Question'
-          examples:
-            application/json:
-              - question: Favourite programming language?
-                published_at: '2015-08-05T08:40:51.620Z'
-                choices:
-                  - choice: Swift
-                    votes: 2048
-                  - choice: Python
-                    votes: 1024
-                  - choice: Objective-C
-                    votes: 512
-                  - choice: Ruby
-                    votes: 256
+  "/api/client/login":
     post:
-      description: >-
-        You may create your own question using this action. It takes a JSON
-        object containing a question and a collection of answers in the
-        form of choices.
-      summary: Create a New Question
+      description: Effettua il login
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Login effettuato con successo
+  "/api/client/register/temporary":
+    post:
+      description: Registra un nuovo utente temporaneo
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Token di accesso e uuid assegnato
+        '400':
+          description: Errore riscontrato in fase di creazione
+  "/api/client/register":
+    post:
+      description: Registra un nuovo utente
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Token di accesso e uuid assegnato
+        '400':
+          description: Errore riscontrato in fase di creazione
+  "/api/client/check":
+    post:
+      description: Controllo che il token passato sia valido
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Token di accesso e uuid assegnato
+        '403':
+          description: Accesso non consentito
+  "/api/client/logout":
+    get:
+      description: Effettua ol logout
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Risposta di base
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito
+  "/api/client":
+    get:
+      description: Informazioni dell'utente
+      tags:
+        - Users
+
+      responses:
+        '200':
+          description: Dati dell'utente
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito
+  "/api/client/confirm":
+    get:
+      description: Conferma l'indirizzo email
+      tags:
+        - Users
       parameters:
-        - name: body
-          in: body
+        - name: token
+          description: Token inviato per email
+          in: query
+          required: true
+          type: string
+
+      responses:
+        '200':
+          description: Risultato dell'operazione
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito. Token non valido
+  "/api/client/change/password":
+    get:
+      description: Form per inviare la modifica della password
+      tags:
+        - Users
+      parameters:
+        - name: token
+          description: Token inviato per email
+          in: query
           required: true
           schema:
-            $ref: '#/definitions/QuestionRequest'
+            type: string
+
       responses:
-        201:
-          description: ''
+        '200':
+          description: Pagina web
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito. Token non valido
+    post:
+      description: Resetta la password per l'utente
+      tags:
+        - Users
+      parameters:
+        - name: token
+          description: Token inviato per email
+          in: query
+          required: true
           schema:
-            $ref: '#/definitions/Question'
-          examples:
-            application/json:
-                question: Favourite programming language?
-                published_at: '2015-08-05T08:40:51.620Z'
-                choices:
-                  - choice: Swift
-                    votes: 0
-                  - choice: Python
-                    votes: 0
-                  - choice: Objective-C
-                    votes: 0
-                  - choice: Ruby
-                    votes: 0
-definitions:
-  Question:
-    title: Question
-    type: object
-    properties:
-      question:
-        type: string
-      published_at:
-        type: string
-      choices:
-        type: array
-        items:
-          $ref: '#/definitions/Choice'
-    required:
-      - question
-      - published_at
-      - choices
-  Choice:
-    title: Choice
-    type: object
-    properties:
-      votes:
-        type: integer
-        format: int32
-      choice:
-        type: string
-    required:
-      - votes
-      - choice
-  QuestionRequest:
-    title: Question Request
-    type: object
-    properties:
-      question:
-        type: string
-      choices:
-        type: array
-        items:
+           type: string
+        - name: password
+          description: La nuova password
+          in: formData
+          required: true
+          schema:
+            type: string
+        - name: passwordConfirm
+          description: Il doppio inserimento della nuova password
+          in: formData
+          required: true
+          schema:
+           type: string
+
+      responses:
+        '200':
+          description: Successo dell'azione
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito. Token non valido
+    put:
+      description: Richiede un reset della password. Il link viene inviato per email
+      tags:
+        - Users
+      parameters:
+        - name: email
+          description: Email al quale inviare il reset della password
+          in: formData
+          required: true
+          schema:
+           type: string
+
+      responses:
+        '200':
+          description: Successo dell'azione
+        '400':
+          description: Errore durante l'esecuzione dell'azione
+        '403':
+          description: Accesso non consentito. Token non valido
+  "/api/country":
+    get:
+      description: Ottiene tutti gli stati con le bandiere supportati
+      tags:
+        - Country
+
+      responses:
+        '200':
+          description: Lista degli stati
+        '403':
+          description: Accesso negato
+    post:
+      description: Aggiunge i country al DB. Disponibile solo in localhost
+      tags:
+        - Country
+
+      responses:
+        '200':
+          description: Il risultato dell'operazione
+        '400':
+          description: L'errore riscontrato se trovato
+        '403':
+          description: Accesso negato
+  "/api/country/client":
+    get:
+      description: Ottiene il country scelto dall'utente
+      tags:
+        - Country
+
+      responses:
+        '200':
+          description: Il country selezionato dall'utente
+        '400':
+          description: Errore riscontrato nell'esecuzione
+        '403':
+          description: Accesso negato
+    put:
+      description: Aggiorna lo stato assegnato all'utente
+      tags:
+        - Country
+
+      parameters:
+        - name: id
+          description: Id dello stato
+          in: formData
+          required: false
           type: string
-    required:
-      - question
-      - choices
-    example:
-      question: Favourite programming language?
-      choices:
-        - Swift
-        - Python
-        - Objective-C
-        - Ruby
+        - name: code
+          description: Codice dello stato
+          in: formData
+          required: false
+          type: string
+        - name: remove
+          description: Rimuove la preferenza dello stato
+          in: formData
+          required: false
+          type: boolean
+      responses:
+        '200':
+          description: L'utente aggiornato
+        '400':
+          description: Errore riscontrato nell'esecuzione
+        '403':
+          description: Accesso negato
+    delete:
+      description: Rimuove il country selezionato dall'utente
+      tags:
+        - Country
+
+      responses:
+        '200':
+          description: Il country selezionato dall'utente
+        '400':
+          description: Errore riscontrato nell'esecuzione
+        '403':
+          description: Accesso negato
+  "/api/game/word/":
+    post:
+      description: Aggiunge le parole al DB (solo LOCALHOST)
+      tags:
+        - Word
+
+      parameters:
+        - name: words
+          description: All words
+          in: formData
+          required: true
+          type: object
+      responses:
+        '200':
+          description: Tutto salvato correttamente
+        '403':
+          description: Accesso non consentito
+  "/api/game/":
+    get:
+      description: Ottiene l'ultima partita creata
+      tags:
+        - Game
+
+      responses:
+        '200':
+          description: L'istanza del gioco
+        '400':
+          description: Istanza non trovata
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+    post:
+      description: Genera una nuova partita
+      tags:
+        - Game
+
+      responses:
+        '200':
+          description: L'istanza del gioco
+        '400':
+          description: Ha già una partita attiva
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+  "/api/game/round":
+    post:
+      description: Genera un nuovo round per l'ultima partita generata dall'utente
+      tags:
+        - Game
+
+      responses:
+        '200':
+          description: Lista dei round
+        '400':
+          description: Errore riscontrato in fase di creazione
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+    get:
+      description: informazioni di un terminato round
+      tags:
+        - Game
+
+      responses:
+        '200':
+          description: Lista dei round
+        '400':
+          description: Errore riscontrato in fase di creazione
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+    put:
+      description: Controllo su parole inserite al termine del round
+      tags:
+        - Game
+
+      parameters:
+        - name: words
+          description: Lista delle parole inserite dall'utente
+          in: formData
+          required: true
+          type: array
+          items:
+            type: string
+        - name: gameTime
+          description: Tempo impiegato nel round in secondi
+          in: formData
+          required: true
+          type: number
+      responses:
+        '200':
+          description: Informazioni sulla partita in corso
+        '400':
+          description: Errore riscontrato in fase di update
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+  "/api/game/recent":
+    put:
+      description: Ottengo le ultime partite dell'utente
+      tags:
+        - Statistics
+
+      parameters:
+      responses:
+        '200':
+          description: Ultime partite dell'utente
+        '400':
+          description: Errore riscontrato in fase di update
+        '401':
+          description: Token non passato
+        '403':
+          description: Sessione o token non validi
+  "/api/":
+    get:
+      description: End point di prova
+      tags:
+        - Default
+
+      responses:
+        '200':
+          description: Risposta corretta
+  "/api/leaderboard":
+    get:
+      description: Ottiene la classifica con i filtri applicati
+      tags:
+        - Leaderboard
+      responses:
+        '200':
+          description: Classifica
+        '400':
+          description: Errore durante la generazione
+        '403':
+          description: Accesso non consentito
+  "/api/leaderboard/type":
+    get:
+      description: Ottiene i tipi di leaderboard supportati dalle API
+      tags:
+        - Leaderboard
+
+      responses:
+        '200':
+          description: I tipi di classifica
+        '403':
+          description: Accesso non consentito
+components: {}
+tags: []
+
